kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eidtest-agents
spec:
  selector:
    matchLabels:
      app: eidtest-agents
  template:
      metadata:
        labels:
          app: eidtest-agents
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: eidtest-trustee1-container
            image: bcgovimages/aries-cloudagent:py36-1.16-1_0.7.4-rc2
            resources:
              requests:
                cpu: 100m
                memory: 128Mi
              limits:
                cpu: 250m
                memory: 256Mi
            ports:
              - containerPort: 8001
                name: http-8001
              - containerPort: 8002
                name: http-admin-api
            args: ["start","--inbound-transport","http","0.0.0.0","8001","--admin","0.0.0.0","8002"]
          - name: eidtest-holder1-container
            image: bcgovimages/aries-cloudagent:py36-1.16-1_0.7.4-rc2
            resources:
              requests:
                cpu: 100m
                memory: 128Mi
              limits:
                cpu: 250m
                memory: 256Mi
            ports:
              - containerPort: 8003
                name: agent-holder1
              - containerPort: 8004
                name: admin-holder1
            args: ["start","--inbound-transport","http","0.0.0.0","8003","--admin","0.0.0.0","8004"]
          - name: eidtest-mediator1-container
            image: bcgovimages/aries-cloudagent:py36-1.16-1_0.7.4-rc2
            resources:
              requests:
                cpu: 100m
                memory: 128Mi
              limits:
                cpu: 250m
                memory: 256Mi
            ports:
              - containerPort: 8005
                name: agent-mediator1
              - containerPort: 8006
                name: admin-mediator1
            args: [ "start","--inbound-transport","http","0.0.0.0","8005","--admin","0.0.0.0","8006" ]
          - name: eidtest-tails-server
            image: frithjofhoppe/indy-tails-server:v1
            ports:
              - containerPort: 6543
                name: tails-server
            args: ["tails-server","--host","0.0.0.0","--port","6543","--storage-path","."]
