kubernetes/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: eidtest-agents-cluster-ip
  labels:
    app: eidtest-agents
spec:
  type: ClusterIP
  selector:
    app: eidtest-agents
  ports:
    - port: 8001
      name: http-8001
      protocol: TCP
      targetPort: 8001
    - port: 8002
      name: http-8002
      protocol: TCP
      targetPort: http-admin-api
    - port: 8003
      name: http-8001
      protocol: TCP
      targetPort: 8001
    - port: 8004
      name: http-8002
      protocol: TCP
      targetPort: http-admin-api
